<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
   	android:paddingRight="20dp"
   	android:paddingTop="20dp" >

    <TextView
        android:id="@+id/add_insurance_insurer_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_insurance_insurer_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_insurance_insurer"
        android:singleLine="true"
        android:hint="@string/add_insurance_insurer"
        android:layout_below="@+id/add_insurance_insurer_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/add_insurance_category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_insurer"
        android:layout_marginTop="10dp"
        android:text="@string/add_insurance_category_label" />

    <Spinner
        android:id="@+id/add_insurance_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_category_label"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/add_insurance_interval_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_category_spinner"
        android:layout_marginTop="10dp"
        android:text="@string/add_insurance_interval_label" />

    <Spinner
        android:id="@+id/add_insurance_interval_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_interval_label"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/add_insurance_premium_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_interval_spinner"
        android:layout_marginTop="10dp"
        android:text="@string/add_insurance_premium_label" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_insurance_premium"
        android:hint="@string/add_insurance_premium"
        android:inputType="numberDecimal"
        android:layout_below="@+id/add_insurance_premium_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/add_insurance_startdate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_premium"
        android:layout_marginTop="10dp"
        android:text="@string/add_insurance_startdate_label" />

    <EditText
        android:id="@+id/add_insurance_startdate_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_startdate_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:inputType="none"
        android:editable="false"
        android:hint="@string/add_insurance_startdate"
        android:onClick="selectDatum" />

    <TextView
        android:id="@+id/add_insurance_enddate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_startdate_edit"
        android:layout_marginTop="10dp"
        android:text="@string/add_insurance_enddate_label" />

    <EditText
        android:id="@+id/add_insurance_enddate_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_insurance_enddate_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:inputType="none"
        android:editable="false"
        android:hint="@string/add_insurance_enddate"
        android:onClick="selectDatum" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/insurance_save_button"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/add_insurance_enddate_edit"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
